deployment/kube-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: artist-pot
  namespace: dev-01
  labels:
    app: artist
spec:
  containers:
    - name: artist
      image: yinglu91/artist:1.0
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: '200Mi'
        requests:
          memory: '100Mi'
